added query filter
